fixed replacing all occurences

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,14 +1,14 @@
 NAME= ex00
-CC= c++
+CXX= c++
 RM= rm -rf
-CPPFLAGS= -Werror -Wextra -Wall -std=c++98
+CXXFLAGS= -Werror -Wextra -Wall -std=c++98
 SRC= main.cpp newZombie.cpp randomChump.cpp Zombie.cpp
 OBJ=$(SRC:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME) : $(OBJ)
-	$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	$(RM) $(OBJ)
