--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -1,14 +1,14 @@
 NAME= ex03
-CPP= c++
+CXX= c++
 RM= rm -rf
-CPPFLAGS= -Werror -Wextra -Wall -std=c++98 -fsanitize=address
+CXXFLAGS= -Werror -Wextra -Wall -std=c++98 -fsanitize=address
 SRC= main.cpp HumanB.cpp HumanA.cpp Weapon.cpp
 OBJ=$(SRC:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME) : $(OBJ)
-	$(CPP) $(CPPFLAGS) $(OBJ) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	$(RM) $(OBJ)
