--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -1,14 +1,14 @@
 NAME= ex04
-CPP= c++
+CXX= c++
 RM= rm -rf
-CPPFLAGS= -Werror -Wextra -Wall -std=c++98
+CXXFLAGS= -Werror -Wextra -Wall -std=c++98
 SRC= main.cpp replace.cpp
 OBJ=$(SRC:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME) : $(OBJ)
-	$(CPP) $(CPPFLAGS) $(OBJ) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	$(RM) $(OBJ)
